added boilerplate for resources
